[package]
name = "imgui-filedialog-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to ImGuiFileDialog v0.5.4 for arcdps-imgui"
license = "MIT"
repository = "https://github.com/jscheah/imgui-filedialog-arcdps"
keywords = ["imgui", "filedialog", "ffi", "arcdps"]
categories = ["external-ffi-bindings", "gui"]

[dependencies]
arcdps-imgui-sys = "0.8"

[build-dependencies]
cc = "1.0"

[features]
default = []
bookmark = []
exploration_by_keys = []
